# Geant4-Generic

./: CMakeLists.txt  DataRead.py  DataRead2D.py  FakeCT.cc  G4Generic.cc  README.txt  histtest  testmac  vismac.mac
Documentation/: G4G.tex
include/: CommandLineParser.hh  Generator.hh  GeometryMessenger.hh  Histogramming.hh  Hit.hh  Initialization.hh  LowMemHist.h  Physics.hh  Run.hh  RunAction.hh  SDMessenger.hh  SensitiveDetector.hh  World.hh
src/: CommandLineParser.cc  Generator.cc  GeometryMessenger.cc  Histogramming.cc  Hit.cc  Initialization.cc  LowMemHist.cc  Physics.cc  Run.cc  RunAction.cc  SDMessenger.cc  SensitiveDetector.cc  World.cc
